<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GraphPage">

    <Button
        android:id="@+id/Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/colors"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Confidence"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="@+id/Confidence"
        app:layout_constraintTop_toBottomOf="@+id/Confidence" />

    <Button
        android:id="@+id/ChangeGraph"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:text="@string/change_graph"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Reset"
        app:layout_constraintStart_toStartOf="@+id/Start"
        app:layout_constraintTop_toBottomOf="@+id/Reset" />

    <include
        android:id="@+id/header"
        layout="@layout/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/GraphText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graph"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/PickNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nodes"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/GraphText"
        app:layout_constraintStart_toStartOf="@+id/GraphText"
        app:layout_constraintTop_toBottomOf="@+id/GraphText" />

    <Button
        android:id="@+id/Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/Start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Start"
        app:layout_constraintTop_toTopOf="@+id/Start"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Confidence"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="412dp"
        android:gravity="center"
        android:text="@string/confidence_0"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PickNumber" />

    <RelativeLayout
        android:id="@+id/relativeLayoutLines"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/Confidence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PickNumber">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutNodes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/Confidence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PickNumber">

    </RelativeLayout>

    <TextView
        android:id="@+id/PopUpMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/proofer_please_pick_node"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/relativeLayoutLines"
        app:layout_constraintTop_toBottomOf="@+id/PickNumber" />


</androidx.constraintlayout.widget.ConstraintLayout>